# v2dmod

./: .gitignore  .gitmodules  CMakeLists.txt  q
bmf2c/: BMFont.h  CMakeLists.txt  impact-25.fnt  main.cpp
examples/fps/: CMakeLists.txt  main.c  v2d_fps.yml
examples/gxmInfo/: CMakeLists.txt  main.c  v2d_gxm.yml
examples/vflux/: CMakeLists.txt  main.c  v2d_vflux.yml
kuio/: CMakeLists.txt  kpool.c  kuio.yml  main.c
kuio/include/: kuio.h
v2dmod/: CMakeLists.txt  config.txt  main.c  v2dmod.c  v2dmod.h  v2dmod.yml  v2dmod_bmf.c  v2dmod_bmf.h  v2dmod_config.c  v2dmod_config.h  v2dmod_drawing.c  v2dmod_drawing.h  v2dmod_fb.c  v2dmod_fb.h  v2dmod_internal.h  v2dmod_kpool.c  v2dmod_log.c  v2dmod_log.h  v2dmod_utility.c  v2dmod_utility.h
v2dmod/data/: impact-18.fnt  impact-23-outline.fnt  impact-23-outline.fnt.c  impact-23-outline.fnt.h  impact-25.fnt
v2dmod/libvita2d/libvita2d/include/: int_htab.h  utils.h  vita2d.h
v2dmod/libvita2d/libvita2d/source/: bin_packing_2d.c  int_htab.c  texture_atlas.c  utils.c  vita2d.c  vita2d_image_bmp.c  vita2d_pgf.c
v2dmod/menu/: menu_drawing_helper.c  menu_drawing_helper.h  menu_main.c  menu_main.h  menu_module_list.c  menu_module_list.h  menu_module_option.c  menu_module_option.h
v2dmod/vita2d/: vita2d.c  vita2d.h  vita2d_bmf.c  vita2d_draw.c  vita2d_image_bmp.c  vita2d_texture.c
v2dmod/vita2d/include/: utils.h  vita2d.h
v2dmod/vita2d/source/: utils.c  vita2d.c  vita2d_bmf.c  vita2d_bmf_parser.c  vita2d_draw.c  vita2d_image_bmp.c  vita2d_texture.c
